projects/Media/docroot/assets/css/common/portraititem.css
.portrait-item {
  display:inline-block;
  width:160px;
  max-width: 100%;
  vertical-align:baseline;
  position:relative;
  padding: 0 9px;
  margin: 10px 0;
  white-space:normal;
  font-family:Verdana,sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight:normal;
  text-align: left;
}
[data-feature-productcard="2018"] .portrait-item {
  padding:0;
}

.lastInLine {
	border-right: none!important;
}
[data-feature-productcard="2018"] .lastInLine {
  border-right: none !important;
}

[data-feature-productcard="2018"] .isHookLogicProduct .portrait-item-productimage_wrapper:after {
	content: "featured product";
	float: left;
	background-color: #bbb;
	color: #fff;
	text-transform: uppercase;
	transform: rotate(90deg);
	transform-origin: left top 0;
	font-size: 11px;
	font-weight: bold;
	line-height: 14px;
	width: 100%;
	opacity: 0.80;
	position: absolute;
}

.regularProduct.portrait-item:before, .isHookLogicProduct.portrait-item:before{
	display:block;
	margin-bottom: 7px;
	font-size: 8pt;
	font-weight: bold;
	text-align:center;
}
.regularProduct.portrait-item:before{
	content: ".";
	color:white;
}
.isHookLogicProduct.portrait-item:before{
	content: "FEATURED PRODUCT";
	background-color:#B5B5B5;
	color:white;
}

.noFeaturedHeaderBanner.isHookLogicProduct :before {
	content: "";
}
[data-feature-productcard="2018"] .regularProduct.portrait-item:before {
	content: "";
}

.portrait-item.isHookLogic-true .portrait-item-productimage{
	/*max-height:105px;
	max-width:105px;*/
}

.portrait-item-price-deal,
.portrait-item a.portrait-item-price-deal,
.portrait-item a.portrait-item-price-deal:link,
.portrait-item a.portrait-item-price-deal:visited,
.portrait-item a.portrait-item-price-deal:hover {
  display: block;
  color:#c00;
  font-weight:bold;
  font-size: 12px;
  line-height: 15px;
}

.portrait-item-price-deal.mixnmatch {
  color:#f7ad5f;
  font-size:10px;
}

.portrait-item-unavailable {
  display:none;
}

.portrait-item-header,
.portrait-item-price {
  float:left;
  width:100%;
}

[data-feature-productcard="2018"] .portrait-item-header,
[data-feature-productcard="2018"] .portrait-item-price {
  padding: 0 5px;
  box-sizing: border-box;
}

.portrait-item-price {
  font-weight: bold;
}

[data-feature-productcard="2018"] .portrait-item-price {
  height: 27px;
}

.portrait-item-price .free-price,
.pdp-price .free-price{
	color: #CC0000;
}

.portrait-item-unit-price {
  display: block;
  font-size: 10px;
  font-weight: normal;
  color: #888;
}
[data-feature-productcard="2018"] .portrait-item-unit-price {
  line-height: 8px;
}

.portrait-item-unit-price:first-child {
  display: inline-block;
  margin-left: .5em;
}

.portrait-item-header .atc-info {
  height: 16px;
}

.portrait-item > form.atc > .atc-info,
.portrait-item > .atc-info {
  float: left;
  width: 100%;
  clear: both;
  min-height: 29px;
}

.portrait-item > form.atc > .atc-info,
.portrait-item > .atc-info {
	min-height: 0px;
}

[data-feature-productcard="2018"] .portrait-item > form.atc > .atc-info,
[data-feature-productcard="2018"] .portrait-item > .atc-info {
	min-height: 0px;
	padding: 0 5px;
	box-sizing: border-box;
}

#transactionalPopup .portrait-item > .atc-info {
  margin-top: 0;
  transition-duration: .2s;
  transition-property: all;
}

.lineitems22 .itemlist-item-addtocart > form.atc > .atc-info .incart-info,
.portrait-item > form.atc > .atc-info .incart-info,
.lineitems22 .itemlist-item-addtocart > .atc-info .incart-info,
.portrait-item > .atc-info .incart-info {
  display: block;
  text-align: center;
  clear: both;
  color: #a35012;
  background-color: #f9f1e9;
  border: 1px solid #ede0d4;
  height: 25px;
  line-height: 25px;
  font-size: 11px;
  border-radius: 5px;
  font-weight: bold;
  margin-top: 2px;
  position: relative;
  z-index: 1;
}

.lineitems22 .itemlist-item-controls.smaller .itemlist-item-addtocart > form.atc > .atc-info .incart-info,
.lineitems22 .itemlist-item-controls.smaller .itemlist-item-addtocart > .atc-info .incart-info {
  height: 20px;
  line-height: 20px;
}

.lineitems22 .itemlist-item-addtocart > form.atc > .atc-info .incart-info,
#transactionalPopup .portrait-item > form.atc > .atc-info .incart-info,
.lineitems22 .itemlist-item-addtocart > .atc-info .incart-info,
#transactionalPopup .portrait-item > .atc-info .incart-info {
  margin-top: -5px;
  margin-bottom: 10px;
  padding-top: 5px;
  transition-duration: .2s;
  transition-property: top;
  top: 0;
}

.lineitems22 .itemlist-item-addtocart > form.atc > .atc-info .incart-info.ADDING,
#transactionalPopup .portrait-item > form.atc > .atc-info .incart-info.ADDING,
.lineitems22 .itemlist-item-addtocart > .atc-info .incart-info.ADDING,
#transactionalPopup .portrait-item > .atc-info .incart-info.ADDING {
  top: -30px;
}

.lineitems22 .itemlist-item-controls.smaller .itemlist-item-addtocart > form.atc > .atc-info .incart-info.ADDING,
.lineitems22 .itemlist-item-controls.smaller .itemlist-item-addtocart > .atc-info .incart-info.ADDING {
  top: -22px;
}

.lineitems22 .itemlist-item-addtocart > form.atc > .atc-info .incart-info[data-amount="0"],
.lineitems22 .itemlist-item-addtocart > .atc-info .incart-info[data-amount="0"],
.portrait-item > form.atc > .atc-info .incart-info[data-amount="0"],
.portrait-item > .atc-info .incart-info[data-amount="0"] {
  display: none;
}

#transactionalPopup .portrait-item > form.atc > .atc-info[data-amount="0"],
#transactionalPopup .portrait-item > .atc-info[data-amount="0"] {
  margin-top: -28px;
  visibility: hidden;
}

#transactionalPopup .portrait-item button.addtocart,
#transactionalPopup .portrait-item button.customize {
  width: 100%;
}

.portrait-item > form.atc > .atc-info .incart-message,
.portrait-item > .portrait-item-controls + .atc-info .incart-message {
  display: none;
}

.qs-content .lineitems22 .itemlist-item-addtocart .atc-info .incart-message{
  display:none;
}

.portrait-item-atl {
  clear: both;
  display: none;
}

.portrait-item-replacement > span {
  text-align: center;
}
/* ... */

